--- a/roam/makefile
+++ b/roam/makefile
@@ -44,7 +44,7 @@ LIBFLAG= -L$(LIBDIR)
 OBJECT= $(SOURCE:.cpp=.o)
 
 # Don't touch any of these either if you don't know what you're doing 
-roam: $(OBJECT) depend
+all: $(OBJECT) depend
 	$(CC) $(CFLAGS) $(INCLUDEFLAG) $(LIBFLAG) $(OBJECT) -o $(EXECUTABLE) $(LDFLAGS) 
 
 depend:
